# Digital-Imprimatur-mirror

./: .$Architecture.drawio.bkp  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Architecture.drawio  CONTRIBUTING.md  README.md  TO-DO  TODO.md  package-lock.json  package.json
server/: API.md  Cargo.toml  main.ts  main_bench.ts  main_test.ts
server/sql/: Documents.sql  Permissions.sql  Submissions.sql  Users.sql
server/src/: errors.ts  main.rs
server/src/auth/: Authenticator.ts  Capability.ts  Supporting.ts
server/src/controllers/: Controller.ts  DataController.ts  DocumentController.ts  EncryptionController.ts  data.rs  doc.rs  mod.rs  security.rs  session.rs  user.rs
server/src/docs/: DocumentManager.ts
server/src/endpoints/: mod.rs  rest.ts
server/src/endpoints/doc/: delete.rs  download.rs  mod.rs  read.rs  upload.rs
server/src/endpoints/feedback/: delete.rs  download.rs  read.rs  upload.rs
server/src/endpoints/sub/: create.rs  create.ts  delete.rs  delete.ts  list.rs  list.ts  mod.rs  mod.ts  read.rs  read.ts  router.ts  update.rs  update.ts
server/src/endpoints/user/: change_password.rs  create.rs  get_info.rs  invalidate.rs  login.rs  mod.rs  submissions.rs
server/src/models/: doc.rs  macros.rs  mod.rs  session.rs  sub.rs  user.rs
server/src/models/auth/: Authenticator.ts  Capability.ts  Errors.ts  Session.ts  Supporting.ts
server/src/submissions/: Submission.ts
server/tests/sub/: create.http  delete.http  read.http  update.http
server/tests/user/: change_password.http  create.http  get_info.http  invalidate.http  login.http
src/: App.js
(+19 files in other folders)
