[package]
name = "digital-imprimatur-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
axum-macros = "0.3.7"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = [ "serde" ] }
once_cell = "1.17.1"
postgres-types = { version = "0.2.5", features = [ "derive" ] }
serde = { version = "1.0.160", features = [ "derive" ] }
serde_bytes_base64 = "0.1.1"
tokio = { version = "1.27.0", features = [ "macros", "rt-multi-thread" ] }
tokio-postgres = { version = "0.7.8", features = [ "with-uuid-1" ] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = [ "serde", "v4" ] }
